force-app/main/default/objects/NCR_EmailMessage__c/NCR_EmailMessage__c.object-meta.xml
<CustomObject>
    <label>NCR EmailMessage</label>
    <nameField>
        <displayFormat>EM-{00000}</displayFormat>
        <label>EmailMessage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCR EmailMessages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>