force-app/main/default/objects/NCR_EmailMessage__c/fields/Email_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Type__c</fullName>
    <label>Email Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dynamic Content</fullName>
            </value>
            <value>
                <fullName>Dynamic Content with Template</fullName>
            </value>
            <value>
                <fullName>Inactive Users Leads And Contacts Notification</fullName>
            </value>
            <value>
                <fullName>IdeaExchange</fullName>
            </value>
            <value>
                <fullName>NCR Dispute Update</fullName>
            </value>
            <value>
                <fullName>IPT Case Comment</fullName>
            </value>
            <value>
                <fullName>GLDC Log Failed</fullName>
            </value>
            <value>
                <fullName>NCR Update Failed</fullName>
            </value>
            <value>
                <fullName>LeadOwnerNotification</fullName>
            </value>
            <value>
                <fullName>GenericPlainText</fullName>
            </value>
            <value>
                <fullName>CasesEscalatedToNotification</fullName>
            </value>
            <value>
                <fullName>sendCaseEmail</fullName>
            </value>
            <value>
                <fullName>PSFR_SENDTOPS_UpdateEmailID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>