force-app/main/default/objects/NCR_EmailMessage__c/fields/Header_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Header_Background_Color__c</fullName>
    <defaultValue>&apos;#54b948&apos;</defaultValue>
    <label>Header Background Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>