force-app/main/default/objects/NCR_EmailMessage__c/fields/Recipient1__c.field-meta.xml
<CustomField>
    <fullName>Recipient1__c</fullName>
    <label>Recipient1</label>
    <type>Email</type>
</CustomField>