force-app/main/default/objects/NCR_EmailMessage__c/fields/Recipient2__c.field-meta.xml
<CustomField>
    <fullName>Recipient2__c</fullName>
    <label>Recipient2</label>
    <type>Email</type>
</CustomField>