force-app/main/default/objects/NCR_EmailMessage__c/fields/Recipient3__c.field-meta.xml
<CustomField>
    <fullName>Recipient3__c</fullName>
    <label>Recipient3</label>
    <type>Email</type>
</CustomField>