force-app/main/default/objects/NCR_EmailMessage__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NCR EmailMessages</relationshipLabel>
    <relationshipName>NCR_EmailMessages</relationshipName>
    <type>Lookup</type>
</CustomField>