force-app/main/default/objects/NCR_EmailMessage__c/fields/UserIDs__c.field-meta.xml
<CustomField>
    <fullName>UserIDs__c</fullName>
    <label>UserIDs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>